# DontWait

./: .gitlab-ci.yml  Dockerfile  README.md  buddy.yml  iv.yaml  pyproject.toml  tasks.py
.github/workflows/: test_versions.yml  upload_dockerhub.yml
docs/: objetivo-3.md  objetivo-4.md  objetivo-5.md  objetivo-6.md  usuarios.md
src/: cliente.py  colas_disponibles.py  enum_tipo_cola.py  tienda.py  turno.py
tests/: clientes.txt  test_clientes.py  test_colas.py
